--- a/XmlDeserializer.CrossCutting/XmlDeserializer.CrossCutting.csproj
+++ b/XmlDeserializer.CrossCutting/XmlDeserializer.CrossCutting.csproj
@@ -1,19 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\XmlDeserializer.CrossCutting\XmlDeserializer.CrossCutting.csproj" />
     <ProjectReference Include="..\XmlDeserializer.Domain\XmlDeserializer.Domain.csproj" />
+    <ProjectReference Include="..\XmlDeserializer.Infra\XmlDeserializer.Infra.csproj" />
   </ItemGroup>
 
 </Project>
