Changed appsetting.json and the logic to get the connection string to the console project.

--- a/XmlDeserializer/XmlDeserializer.csproj
+++ b/XmlDeserializer/XmlDeserializer.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
@@ -13,6 +15,12 @@
   <ItemGroup>
     <ProjectReference Include="..\XmlDeserializer.CrossCutting\XmlDeserializer.CrossCutting.csproj" />
     <ProjectReference Include="..\XmlDeserializer.Domain\XmlDeserializer.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
