Added comments and changed appSettings.json

--- a/XmlDeserializer/appSettings.json
+++ b/XmlDeserializer/appSettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "FilmsDatabase": "Data Source=DESKTOP-LFU4RFH;Initial Catalog=Films;Integrated Security=True"
+    "FilmsDatabase": "Data Source=localhost;Initial Catalog=Films;Integrated Security=True"
   }
 }
